# llm_learning

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
api/chatbot/controllers/: chatbot.py
api/chatbot/schemas/: user_question.py
apps/chatbot/services/: chatbot_service.py  embedding_service.py
apps/utils/: state.py
core/common/: vector_database.py
